[package]
name = "hath"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "fs", "time", "signal", "macros", "rt-multi-thread"] }

log = { version = "0.4", features = ["serde"] }
simple_logger = "5.0"

hyper = { version = "1.5", features = ["client", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "server-auto", "http1", "http2"] }
http = "1.1"
http-body = "*"
http-body-util = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "tokio"] }
tower = "0.5"

openssl = "0.10"
tokio-openssl = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"

# h2 is dependent on tracing which we don't use, so we disable log in compile time
# https://github.com/hyperium/h2/pull/776
tracing = { version = "*", default-features = false, features = ["max_level_off", "release_max_level_off"] }

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
